[gd_scene load_steps=19 format=3 uid="uid://b0ofo8vubswi5"]

[ext_resource type="Script" uid="uid://dw8q7ywwb6ubi" path="res://enemy_3.gd" id="1_dxyk6"]
[ext_resource type="Texture2D" uid="uid://cnontrv4iu3rj" path="res://icon.svg" id="2_no5mw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxyk6"]
atlas = ExtResource("2_no5mw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_no5mw"]
atlas = ExtResource("2_no5mw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15ab"]
atlas = ExtResource("2_no5mw")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60q65"]
atlas = ExtResource("2_no5mw")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2kam"]
atlas = ExtResource("2_no5mw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1bkt"]
atlas = ExtResource("2_no5mw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tot4"]
atlas = ExtResource("2_no5mw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j66hg"]
atlas = ExtResource("2_no5mw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4c84r"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_dxyk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no5mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60q65")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2kam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1bkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tot4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j66hg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v15ab"]
radius = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_60q65"]
radius = 193.49419

[sub_resource type="SegmentShape2D" id="SegmentShape2D_h2kam"]
b = Vector2(104, -96)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c1bkt"]
b = Vector2(-88, -104)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3tot4"]
b = Vector2(104, 96)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_j66hg"]
b = Vector2(-96, 96)

[sub_resource type="CircleShape2D" id="CircleShape2D_dxyk6"]
radius = 71.55418

[node name="enemy_3" type="CharacterBody2D"]
script = ExtResource("1_dxyk6")

[node name="body" type="AnimatedSprite2D" parent="."]
position = Vector2(2.861023e-06, -6.198883e-06)
scale = Vector2(4.5, 4)
sprite_frames = SubResource("SpriteFrames_4c84r")
animation = &"attack"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v15ab")
disabled = true

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_60q65")

[node name="eyes" type="Sprite2D" parent="."]
position = Vector2(3.8146973e-06, 1.9073486e-06)
scale = Vector2(0.6875, 0.625)
texture = ExtResource("2_no5mw")

[node name="attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("SegmentShape2D_h2kam")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("SegmentShape2D_c1bkt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("SegmentShape2D_3tot4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("SegmentShape2D_j66hg")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_dxyk6")

[connection signal="animation_finished" from="body" to="." method="_on_body_animation_finished"]
